--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,4 @@ before_install:
 
 script:
 - fgt golint $(find . | grep .go$ | grep -v dropboxsync.pb.go)
-- $HOME/gopath/bin/goveralls -service=travis-ci -ignore=dropboxsync.go,main.go -package github.com/brotherlogic/dropboxsync
+- $HOME/gopath/bin/goveralls -service=travis-ci -ignore=dropboxsync.go,dropboxlib.go -package github.com/brotherlogic/dropboxsync
